<resources>
    <string name="app_name">Skin Aja</string>
    <string name="signup">DAFTAR</string>
    <string name="login">MASUK</string>
    <string name="title_welcome_page">Selamat datang di Dicoding!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="title_story">Judul Story</string>
    <string name="description">Deskripsi Story</string>
    <string name="picture_of_story">gambar dari story</string>
    <string name="create_account">Buat akun? Daftar</string>
    <string name="min_password">Password minimal 8 karakter</string>
    <string name="logo_dicoding">Logo Dicoding</string>
    <string name="invalid_password">Password tidak boleh kurang dari 8 karakter</string>
    <string name="invalid_email">Format email tidak valid</string>
    <string name="password_empty">Password tidak boleh kosong</string>
    <string name="phone_empty">No HP tidak boleh kosong</string>
    <string name="email_empty">Email tidak boleh kosong</string>
    <string name="have_account">Sudah punya akun? Masuk</string>
    <string name="empty_name">Nama tidak boleh kosong</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Beranda</string>
    <string name="forgot_password">Lupa Kata Sandi?</string>
    <string name="or">ATAU</string>
    <string name="title_profile">Profil</string>
    <string name="edit_photo">Ubah Foto</string>
    <string name="phone">No HP</string>
    <string name="data_must_not_be_empty">Data tidak boleh kosong</string>
    <string name="biodata">Selamat datang di skin aja, Lengkapi data dirimu !!</string>
    <string name="warning_data_empty">Email dan Password Tidak Boleh Kosong</string>
    <string name="reset_password">Reset Kata Sandi</string>
    <string name="skin_detection">Deteksi Penyakit</string>
    <string name="skin_disease">Penyakit Kulit</string>
    <string name="thema">Tema</string>
    <string name="email_user">skinner@Gmail</string>
    <string name="name_user">Skinner</string>
    <string name="name_disease">Masukan Nama Penyakit</string>
    <string name="disease">Nama Penyakit</string>
    <string name="disease_description">Deskripsi Penyakit</string>
    <string name="penyebab">Penyebab</string>
    <string name="penanganan">Penanganan</string>
    <string name="description_sebab">deskripsi penyebab</string>
    <string name="descriptionsolve">Deskripsi Penanganan</string>
    <string name="warning_to_upload_image">Pastikan gambar yang diunggah memiliki pencahayaan yang cukup agar detailnya terlihat jelas!</string>
    <string name="take_picture_from_camera">Ambil Foto dari Kamera</string>
    <string name="take_from_galery">Pilih dari Galeri</string>
    <string name="cancel">Batal</string>
    <string name="take_picture_from">Pilih Sumber Gambar</string>
    <string name="warning_data_must_be_fill">Sign up gagal: Semua data harus di isi</string>
    <string name="put_biodata">Masukan Data Diri</string>

</resources>